# OS

./: .gitignore  CMakeLists.txt  copy.cpp  exp1.cpp  exp2  exp3.cpp  exp4.cpp  get.cpp  head.h  mySem  mySem.cpp  pipe.cpp  put.cpp  seller.cpp  test.cpp  waitPid.cpp  课设.cpp
